<resources>
    <string name="app_name">Droid Cafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_dessert_recipe_fragment">Hello Dessert Recipe Fragment</string>
    <string name="hello_pastries_recipe_fragment">Hello Pastries Recipe Fragment</string>
    <string name="hello_stores_fragment">Hello Stores Fragment</string>
    <string name="tab_label_1">Desserts</string>
    <string name="tab_label_2">Pastries</string>
    <string name="tab_label_3">Stores</string>
    <string name="dessert_recipes">Dessert Recipes</string>
    <string name="browse_recipes">Browse Recipes</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="prep_amp_cook_time_2hrs"><![CDATA[Prep & Cook Time: 2hrs]]></string>
    <string name="recipe_short_description">Recipe short description</string>
    <string name="how_to_prepare_donuts">How to prepare donuts</string>
    <string name="pastries_recipes">pastries_recipes</string>
    <string name="how_to_prepare_froyo">How to prepare Froyo</string>
    <string name="how_to_prepare_ice_cream_sandwich">How to prepare ice cream sandwich</string>
    <string name="galleria_description">Enjoy the outside seating a Galleria, conveniently in the center of the mall to enjoy a coffee after shopping, family meal or evening cocktail. Read more...</string>
    <string name="open_daily_from_7_00_a_m">Open Daily from 7:00 a.m</string>
    <string name="galleria">Galleria</string>
    <string name="rate_our_stores">Rate our stores</string>
    <string name="droid_caffe_stores">Droid Caffe Stores</string>
    <string name="pizzas">Pizzas</string>
    <string name="pasta">pasta</string>
    <string name="cocktails">Cocktails</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fastfood">Fastfood</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share App with</string>

    <array name="desserts_images">
        <item>@drawable/donut</item>
        <item>@drawable/froyo</item>
        <item>@drawable/sandwich</item>
        <item>@drawable/donut</item>
        <item>@drawable/froyo</item>
        <item>@drawable/sandwich</item>
        <item>@drawable/donut</item>
        <item>@drawable/froyo</item>
        <item>@drawable/sandwich</item>
    </array>

    <string-array name="dessert_title">
        <item>Donut</item>
        <item>Froyo</item>
        <item>Ice Cream Sandwich</item>
        <item>Donut</item>
        <item>Froyo</item>
        <item>Ice Cream Sandwich</item>
        <item>Donut</item>
        <item>Froyo</item>
        <item>Ice Cream Sandwich</item>
    </string-array>
    <string name="about_text">Droid cafe is a simple app displaying stores and menu items offered in those stores.
        It implements material design.
    </string>
    <string name="ok">OK</string>

    <string-array name="dessert_description">
        <item>Donuts are glazed and sprinkled with candy</item>
        <item>Froyo is a premium self_serve frozen yoghurt</item>
        <item>Ice cream sandwiches have choclate and vanilla filling</item>
        <item>Donuts are glazed and sprinkled with candy</item>
        <item>Froyo is a premium self_serve frozen yoghurt</item>
        <item>Ice cream sandwiches have choclate and vanilla filling</item>
        <item>Donuts are glazed and sprinkled with candy</item>
        <item>Froyo is a premium self_serve frozen yoghurt</item>
        <item>Ice cream sandwiches have choclate and vanilla filling</item>
    </string-array>


    <!--resources for pastries-->
    <array name="pastries_images">
        <item>@drawable/cake</item>
        <item>@drawable/samosa</item>
        <item>@drawable/bread</item>
        <item>@drawable/cake</item>
        <item>@drawable/samosa</item>
        <item>@drawable/bread</item>
        <item>@drawable/cake</item>
        <item>@drawable/samosa</item>
        <item>@drawable/bread</item>
    </array>

    <string-array name="pastries_title">
        <item>cake</item>
        <item>samosa</item>
        <item>bread</item>
        <item>cake</item>
        <item>samosa</item>
        <item>bread</item>
        <item>cake</item>
        <item>samosa</item>
        <item>bread</item>
    </string-array>

    <string-array name="pastries_description">
        <item>Slice of chocolate flavoured cake</item>
        <item>Yummy samosa with source</item>
        <item>sweet bread</item>
        <item>Slice of chocolate flavoured cake</item>
        <item>Yummy samosa with source</item>
        <item>sweet bread</item>
        <item>Slice of chocolate flavoured cake</item>
        <item>Yummy samosa with source</item>
        <item>sweet bread</item>
    </string-array>
    <!--end of resources for pastries-->

    <!--resources for stores-->
    <array name="store_images">
        <item>@drawable/galleria_shopping_mall_kenya_1</item>
        <item>@drawable/gardencity</item>

    </array>

    <string-array name="store_title">
        <item>Galleria</item>
        <item>Galleria</item>
<!--        <item>bread</item>-->
<!--        <item>cake</item>-->
<!--        <item>samosa</item>-->
<!--        <item>bread</item>-->
<!--        <item>cake</item>-->
<!--        <item>samosa</item>-->
<!--        <item>bread</item>-->
    </string-array>

    <string-array name="store_description">
        <item>Enjoy the outside seating a Galleria, conveniently in the center of the mall to enjoy a coffee after shopping, family meal or evening cocktail. Read more...</item>
        <item>Yummy samosa with source</item>
<!--        <item>sweet bread</item>-->
<!--        <item>Slice of chocolate flavoured cake</item>-->
<!--        <item>Yummy samosa with source</item>-->
<!--        <item>sweet bread</item>-->
<!--        <item>Slice of chocolate flavoured cake</item>-->
<!--        <item>Yummy samosa with source</item>-->
<!--        <item>sweet bread</item>-->
    </string-array>

    <!--End of resources for stores-->
    <string-array name="store_links">
        <item>https://www.inpulseglobal.com/two-rivers-mall-kenya/</item>
        <item>https://www.inpulseglobal.com/two-rivers-mall-kenya/</item>
    </string-array>
</resources>