<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pizza"
            android:icon="@drawable/ic__pizza"
            android:title="@string/pizzas" />
        <item
            android:id="@+id/nav_cocktail"
            android:icon="@drawable/ic_cocktail"
            android:title="@string/cocktails" />
        <item
            android:id="@+id/nav_fastfood"
            android:icon="@drawable/ic_fastfood"
            android:title="@string/fastfood" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact_phone"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav5_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share_app" />
        </menu>
    </item>

</menu>