<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/sandwich_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sandwich_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/css_grey"
                android:paddingBottom="10dp"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/sandwich_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_title"
                android:textColor="@color/yellow"
                android:layout_alignBottom="@id/sandwich_image"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Light"/>



            <TextView
                android:id="@+id/sandwich_prep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prep_amp_cook_time_2hrs"
                android:textColor="?android:textColorSecondary"
                android:layout_below="@id/sandwich_title"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_prep_time"
                android:drawableLeft="@drawable/ic_prep_time"
                android:theme="@style/ThemeOverlay.AppCompat.Light"/>

            <!--Add an Horizontal line-->
            <View
                android:id="@+id/sandwich_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/sandwich_prep"
                android:background="@color/css_grey"/>


            <TextView
                android:id="@+id/sandwich_descripton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_short_description"
                android:textColor="@color/navy_blue"
                android:layout_below="@id/sandwich_divider"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="3dp"
                android:textStyle="italic"
                android:theme="@style/ThemeOverlay.AppCompat.Light"/>




        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_below="@id/sandwich_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_prepare_ice_cream_sandwich"
            android:textStyle="bold"
            android:textColor="@color/navy_blue"/>

    </RelativeLayout>

</RelativeLayout>